--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   "author": "Ajith kumar R",
   "license": "MIT",
   "dependencies": {
+    "@google-cloud/translate": "^6.2.7",
     "axios": "^0.21.1",
     "config": "^3.3.6",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "mysql": "^2.18.1"
+    "mysql2": "^2.3.0",
+    "sequelize": "^6.6.5"
   },
   "devDependencies": {
+    "nodemon": "^1.19.4",
     "chalk": "^4.1.2",
     "morgan": "^1.10.0"
   }
