--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "sequelize": "^6.6.5"
   },
   "devDependencies": {
-    "nodemon": "^1.19.4",
     "chalk": "^4.1.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "nodemon": "^1.19.4"
   }
 }
